force-app/main/default/objects/Prometheion_Scheduler_Config__mdt/Prometheion_Scheduler_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for Prometheion scheduled jobs including CRON expressions, batch sizes, and activation status.</description>
    <label>Prometheion Scheduler Config</label>
    <pluralLabel>Prometheion Scheduler Configs</pluralLabel>
</CustomObject>