force-app/main/default/objects/Prometheion_Scheduler_Config__mdt/fields/CRON_Expression__c.field-meta.xml
<CustomField>
    <fullName>CRON_Expression__c</fullName>
    <description>CRON expression for scheduling the job</description>
    <label>CRON Expression</label>
    <length>100</length>
    <type>Text</type>
</CustomField>