force-app/main/default/objects/Prometheion_Scheduler_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of what this scheduler does</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>