force-app/main/default/objects/Prometheion_Scheduler_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this scheduler configuration is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>