force-app/main/default/objects/Prometheion_Scheduler_Config__mdt/fields/Scheduler_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Name__c</fullName>
    <label>Scheduler Name</label>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <length>80</length>
</CustomField>